--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -113,7 +113,7 @@
 												<span aria-hidden="true">x</span>
 											</button>
 										</div>
-										<div class="modal-body" style="padding: 0;">
+										<div id = "infobody" class="modal-body" style="padding: 0;">
 											<div class="table-responsive">
 												<table class="table">
 													<thead>
@@ -139,9 +139,10 @@
 											</div>
 										</div>
 										<div class="modal-footer">
+											<button onclick = newPayrtField() class="btn btn-primary mr-auto" type="button">Add New Payrate</button>
 											<button class="btn btn-light" type="button"
 												data-dismiss="modal">Close</button>
-											<button class="btn btn-primary" type="button">Save</button>
+											<button onclick = saveChanges() class="btn btn-primary" type="button">Save</button>
 										</div>
 									</div>
 								</div>
@@ -164,7 +165,6 @@
 		var I;
 		var H;
 		var status = -1;
-		var payratesList = [];
 		var xhr = new XMLHttpRequest();
 		var rqueue = [ "./OV/test", "./OV/main/employees",
 				"./OV/main/databases" ];
@@ -254,7 +254,6 @@
 		function updateinfo() {
 			var body = document.getElementById('infotable');
 			body.innerHTML = "";
-			payratesList = [];
 
 			for (var i = 0; i < info.length; i++) {
 
@@ -274,9 +273,37 @@
 				active.appendChild(atxt);
 				ver.appendChild(active);
 				body.appendChild(ver);
-				payratesList.push([info[i].cost, info[i].startDate, info[i].endDate]);
 			}
-			console.log(payratesList);
+			console.log(info);
+		}
+		
+		function newPayrtField() {
+			var body = document.getElementById('infotable');
+			updateinfo();
+			var row = body.insertRow(info.length);
+			var cell1 = row.insertCell(0);
+			var cell2 = row.insertCell(1);
+			var cell3 = row.insertCell(2);
+			cell1.innerHTML = "<input id='newPayrt' type='text' placeholder='Payrate' size = '10'>";
+			cell2.innerHTML = "<input id='startDate' type='text' placeholder='Start Date' size = '10'>";
+			cell3.innerHTML = "<input id='endDate' type='text' placeholder='End Date' size = '10'>";
+			
+		}
+		
+		function saveChanges() {
+			let crdnr = info[0].id;
+			let payrate = document.getElementById("newPayrt").value;
+			let stDt = document.getElementById("startDate").value;
+			let edDt = document.getElementById("endDate").value;
+			let data = {"id" : crdnr, "cost" : payrate, "startDate" : stDt, "endDate" : edDt};
+			if(payrate != "" && stDt != "" && edDt != "") {
+ 				xhr.open("POST", "./OV/main/addPayrate/");
+				xhr.setRequestHeader('Accept', 'application/json');
+				xhr.setRequestHeader("Content-type", "applicatioin/json");
+				console.log(data);
+				xhr.send(JSON.stringify(data));
+			}
+			updateinfo();
 		}
 		
 		function logout() {
@@ -348,13 +375,13 @@
 			}
 			xhr.send();
 		}
-		
+		/*
 		function editPayrate() {
 			if(payrateList.length != 0) {
 				xhr.open("GET", "./OV/main/editPayrate/" + payrateList);
 			}
 			xhr.send();
-		}
+		}*/
 		
 		function getId(x, name) {
 			xhr.open("GET", "./OV/main/employees/" + x);
