--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,73 +2,102 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="477517551933-umld4fqt1rrf4mhou2t7pd4nb5ruepus.apps.googleusercontent.com">
-    <title>Module4</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-signin-client_id"
+	content="477517551933-umld4fqt1rrf4mhou2t7pd4nb5ruepus.apps.googleusercontent.com">
+<title>Module4</title>
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <div class="login-clean">
-        <form method="post">
-            <h2 class="sr-only">Login Form</h2><img src="assets/img/OV.png" style="width:100%;">
-            <div class="illustration"></div>
-            <div class="form-group"><input id = "username" class="form-control" type="text" name="username" placeholder="Username"></div>
-            <div class="form-group"><input id = "password" class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><button type="button" onclick = login() class="btn btn-primary btn-block">Log in</button></div>
-            <p id="or">or</p>
-            <div class="form-group"><div data-width="auto" class="g-signin2" data-onsuccess="onSignIn"></div></div>
-            <label id="warning" style="color:red;"></label>
-            <a href="#" class="forgot">Forgot your email or password?</a>
-        </form>
-    </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script>
-	var username;
-	var password;
-	
-    var xhr = new XMLHttpRequest();
-    
-    function login() {
-		username = document.getElementById("username").value;
-		password = document.getElementById("password").value;
-		console.log(username.length == 0);
-		console.log(password.length == 0);
-		if (username.length == 0 || password.length == 0){
-			$("#warning")
-			.text(
-					"Please do not leave one of the space empty.");
-		} else {
-			$
-			.get({
-				url : "./OV/login/" + username + "/" + password,
-				success : function(response) {
-					if (response == 0) {
-						$("#warning")
-								.text(
-										"Either username or password is wrong or does not exist, please try again.");
-					} else {
-						window.open("./main.html", "_self");
-					}
-					console.log(response);
-				}
-			})
-		}
-		
-	}
+	<div class="login-clean">
+		<form method="post">
+			<h2 class="sr-only">Login Form</h2>
+			<img src="assets/img/OV.png" style="width: 100%;">
+			<div class="illustration"></div>
+			<div class="form-group">
+				<input id="username" class="form-control" type="text"
+					name="username" placeholder="Username">
+			</div>
+			<div class="form-group">
+				<input id="password" class="form-control" type="password"
+					name="password" placeholder="Password">
+			</div>
+			<div class="form-group">
+				<button type="button" onclick=login()
+					class="btn btn-primary btn-block">Log in</button>
+			</div>
+			<p id="or">or</p>
+			<div class="form-group">
+				<div data-width="auto" class="g-signin2" data-onsuccess="onSignIn"></div>
+			</div>
+			<label id="warning" style="color: red;"></label> <a href="#"
+				class="forgot">Forgot your email or password?</a>
+		</form>
+	</div>
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<script>
+		var username;
+		var password;
 
-    function onSignIn(googleUser) {
-        var id_token = googleUser.getAuthResponse().id_token;
-        xhr.open('POST', './OV/googleLogin');
-        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-        xhr.send(id_token);
-    }
-    
+		var xhr = new XMLHttpRequest();
+
+		function login() {
+			username = sanitizeInput(document.getElementById("username").value);
+			password = sanitizeInput(document.getElementById("password").value);
+			console.log(username);
+			console.log(password);
+			if (username.length == 0 || password.length == 0) {
+				$("#warning").text(
+						"Please do not leave one of the space empty.");
+			} else {
+				$
+						.get({
+							url : "./OV/login/" + username + "/" + password,
+							success : function(response) {
+								if (response == 0) {
+									$("#warning")
+											.text(
+													"Either username or password is wrong or does not exist, please try again.");
+								} else {
+									window.open("./main.html", "_self");
+								}
+								console.log(response);
+							}
+						})
+			}
+
+		}
+
+		function onSignIn(googleUser) {
+			var id_token = googleUser.getAuthResponse().id_token;
+			xhr.open('POST', './OV/googleLogin');
+			xhr.setRequestHeader('Content-Type',
+					'application/x-www-form-urlencoded');
+			xhr.send(id_token);
+		}
+
+		function sanitizeInput(input) {
+			var out = '';
+			for (i = 0; i < input.length; i++) {
+				inp = input.charCodeAt(i);
+				// remove special character else than '_'
+				if ((inp >= 65 && inp <= 90) || (inp >= 97 && inp <= 122)
+						|| (inp == 95) || (inp >= 48 && inp <= 57)) {
+					out += String.fromCharCode(inp);
+				} else {
+					inp = '%'
+							+ (Math.floor((Math.random() * 99) + 1)).toString();
+					out += inp;
+				}
+			}
+			return out;
+		}
 	</script>
 </body>
 
