--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -19,140 +19,170 @@
 </head>
 
 <body onload="requestContent()">
-	<div>
-		<div class="container">
-			<div class="row" style="padding-top: 12px; padding-bottom: 6px;padding-right: 20px; padding-left: 15px;">
-				<div class="col-md-12" style="padding: 0px;">
-					<div class="card" id="card-style">
-						<div class="card-body">
-							<div class="col-md-12 d-flex align-items-center">
-								<img src="assets/img/OV.png"
-									style="height: 80px; margin-right: 12px;"><input
-									id="searchid" type="text" placeholder="Employee Number"
-									style="margin: 6px;"><input id="searchname" type="text"
-									placeholder="Full Name" style="margin: 6px;">
-								<div class="dropdown d-inline-flex">
-									<button id="statusButton"
-										class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
-										aria-expanded="false" type="button"
-										style="margin-right: 6px; margin-left: 6px; border-radius : 6px; ">Status</button>
-									<div id="statusDropdown" class="dropdown-menu" role="menu">
-										<a id="statusA" value = "A" onclick=statusFilterA() class="dropdown-item" role="presentation">Active</a>
-											<a id="statusI" value = "I" onclick=statusFilterI() class="dropdown-item" role="presentation">Not Active</a>
-											<a id="statusH" value = "H" onclick=statusFilterH() class="dropdown-item" role="presentation">Not Active Yet</a>
-									</div>
-								</div>
-								<button onclick=searchupdate() class="btn btn-primary"
-									type="button" style="margin-left: 6px;border-radius: 6px;">Search</button>
-								<div class="btn-group ml-auto" role="group">
-									<div class="dropdown d-inline-flex" style="margin: 6px;">
-										<button id="officeButtton"
-											class="btn btn-primary dropdown-toggle"
-											data-toggle="dropdown" aria-expanded="false" type="button"
-											style="margin-right: 6px; margin-left: 6px;border-radius: 6px; padding-left: 20px;">Office</button>
-										<div id="officeDropdown" class="dropdown-menu" role="menu">
-											<a class="dropdown-item" role="presentation" href="#">Amersfoort</a><a
-												class="dropdown-item" role="presentation" href="#">Apeldoorn</a><a
-												class="dropdown-item" role="presentation" href="#">DenHaag</a>
-												<a class="dropdown-item" role="presentation" href="#">Münster</a><a
-												class="dropdown-item" role="presentation" href="#">Oldenzaal</a>
-										</div>
-									</div>
-									<form id="upload" enctype="multipart/form-data" method="post"
-										action="./OV/main/import">
-										<button class="btn btn-primary" type="button"
-											onclick="openFileDialog();" style="margin: 6px; border-radius: 6px;">Import</button>
-										<input type="file" id="fileLoader"
-											onchange="this.form.submit()" name="files" title="Load File" />
-									</form>
-									<button class="btn btn-primary" type="button"
-										onclick="location.href='./OV/main/export.csv'"
-										style="margin: 6px; border-radius: 6px;">Export</button>
-									<button onclick=logout() class="btn btn-primary" type="button"
-										style="margin: 6px; border-radius: 6px;">Log Out</button>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row" style="padding-top: 6px;">
-				<div class="col-md-12">
-					<div class="card">
-						<div class="card-body" style="padding: 0px;">
-							<div class="table-responsive table-hover">
-								<table class="table">
-									<thead>
-										<tr>
-											<td>Employee Number</td>
-											<td>Full Name</td>
-											<td>Status</td>
-										</tr>
-									</thead>
-									<tbody id="EmployeeList">
-										<tr>
-											<td></td>
-											<td></td>
-											<td></td>
-										</tr>
-										<tr>
-											<td></td>
-											<td></td>
-											<td></td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<div class="modal fade" role="dialog" tabindex="-1" id="empInfo">
-								<div class="modal-dialog" role="document">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h4 id=infotitle class="modal-title"></h4>
-											<button type="button" class="close" data-dismiss="modal"
-												aria-label="Close">
-												<span aria-hidden="true">x</span>
-											</button>
-										</div>
-										<div id = "infobody" class="modal-body" style="padding: 0;">
-											<div class="table-responsive">
-												<table class="table">
-													<thead>
-														<tr>
-															<th>Payrate</th>
-															<th>From</th>
-															<th>Until</th>
-														</tr>
-													</thead>
-													<tbody id=infotable>
-														<tr>
-															<td></td>
-															<td></td>
-															<td></td>
-														</tr>
-														<tr>
-															<td></td>
-															<td></td>
-															<td></td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
-										<div class="modal-footer">
-											<button onclick = newPayrtField() class="btn btn-primary mr-auto" type="button">Add New Payrate</button>
-											<button class="btn btn-light" type="button"
-												data-dismiss="modal">Close</button>
-											<button onclick = saveChanges() class="btn btn-primary" type="button">Save</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div id="wrapper">
+
+<!-- Sidebar -->
+<div id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+        <li class="sidebar-brand">
+            <a >
+                OV Software
+            </a>
+        </li>
+        <li>
+            <a href="#">Payrates</a>
+        </li>
+        <li>
+            <a href="admin.html">Administration</a>
+        </li>
+    </ul>
+</div>
+<!-- /#sidebar-wrapper -->
+
+<!-- Page Content -->
+<div id="page-content-wrapper">
+    <div class="container-fluid">
+        <div class="row" style="padding-top: 12px; padding-bottom: 6px;padding-right: 20px; padding-left: 15px;">
+            <div class="col-md-12" style="padding: 0px;">
+                <div class="card" id="card-style">
+                    <div class="card-body">
+                        <div class="col-md-12 d-flex align-items-center">
+                            <div id="menu-toggle" href="#menu-toggle">
+                                <div class="bar1"></div>
+                                <div class="bar2"></div>
+                                <div class="bar3"></div>
+                            </div>
+                            <img src="assets/img/OV.png"
+                                 style="height: 80px; margin-right: 12px;"><input
+                                id="searchid" type="text" placeholder="Employee Number"
+                                style="margin: 6px;"><input id="searchname" type="text"
+                                                            placeholder="Full Name" style="margin: 6px;">
+                            <div class="dropdown d-inline-flex">
+                                <button id="statusButton"
+                                        class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                                        aria-expanded="false" type="button"
+                                        style="margin-right: 6px; margin-left: 6px; border-radius : 6px; ">Status</button>
+                                <div id="statusDropdown" class="dropdown-menu" role="menu">
+                                    <a id="statusA" value = "A" onclick=statusFilterA() class="dropdown-item" role="presentation">Active</a>
+                                    <a id="statusI" value = "I" onclick=statusFilterI() class="dropdown-item" role="presentation">Not Active</a>
+                                    <a id="statusH" value = "H" onclick=statusFilterH() class="dropdown-item" role="presentation">Not Active Yet</a>
+                                </div>
+                            </div>
+                            <button onclick=searchupdate() class="btn btn-primary"
+                                    type="button" style="margin-left: 6px;border-radius: 6px;">Search</button>
+                            <div class="btn-group ml-auto" role="group">
+                                <div class="dropdown d-inline-flex" style="margin: 6px;">
+                                    <button id="officeButtton"
+                                            class="btn btn-primary dropdown-toggle"
+                                            data-toggle="dropdown" aria-expanded="false" type="button"
+                                            style="margin-right: 6px; margin-left: 6px;border-radius: 6px; padding-left: 20px;">Office</button>
+                                    <div id="officeDropdown" class="dropdown-menu" role="menu">
+                                        <a class="dropdown-item" role="presentation" href="#">Amersfoort</a><a
+                                            class="dropdown-item" role="presentation" href="#">Apeldoorn</a><a
+                                            class="dropdown-item" role="presentation" href="#">DenHaag</a>
+                                        <a class="dropdown-item" role="presentation" href="#">Münster</a><a
+                                            class="dropdown-item" role="presentation" href="#">Oldenzaal</a>
+                                    </div>
+                                </div>
+                                <form id="upload" enctype="multipart/form-data" method="post"
+                                      action="./OV/main/import">
+                                    <button class="btn btn-primary" type="button"
+                                            onclick="openFileDialog();" style="margin: 6px; border-radius: 6px;">Import</button>
+                                    <input type="file" id="fileLoader"
+                                           onchange="this.form.submit()" name="files" title="Load File" />
+                                </form>
+                                <button class="btn btn-primary" type="button"
+                                        onclick="location.href='./OV/main/export.csv'"
+                                        style="margin: 6px; border-radius: 6px;">Export</button>
+                                <button onclick=logout() class="btn btn-primary" type="button"
+                                        style="margin: 6px; border-radius: 6px;">Log Out</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 6px;">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body" style="padding: 0px;">
+                        <div class="table-responsive table-hover">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <td>Employee Number</td>
+                                    <td>Full Name</td>
+                                    <td>Status</td>
+                                </tr>
+                                </thead>
+                                <tbody id="EmployeeList">
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="modal fade" role="dialog" tabindex="-1" id="empInfo">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 id=infotitle class="modal-title"></h4>
+                                        <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close">
+                                            <span aria-hidden="true">x</span>
+                                        </button>
+                                    </div>
+                                    <div id = "infobody" class="modal-body" style="padding: 0;">
+                                        <div class="table-responsive">
+                                            <table class="table">
+                                                <thead>
+                                                <tr>
+                                                    <th>Payrate</th>
+                                                    <th>From</th>
+                                                    <th>Until</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody id=infotable>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button onclick = newPayrtField() class="btn btn-primary mr-auto" type="button">Add New Payrate</button>
+                                        <button class="btn btn-light" type="button"
+                                                data-dismiss="modal">Close</button>
+                                        <button onclick = saveChanges() class="btn btn-primary" type="button">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<!-- /#page-content-wrapper -->
+
+</div>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="assets/js/main.js"></script>
@@ -419,6 +449,11 @@
 				rcounter++;
 			}
 		}
+
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
 	</script>
 </body>
 
