adding and editing payrates

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -352,6 +352,7 @@
 			
 		}
 		
+		// function when save button pressed
 		function saveChanges() {
 			console.log("save");
 			let infoname = document.getElementById("infotitle").innerHTML;
