--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -329,7 +329,7 @@
 		    for(k = 0; k < 3; k++) {
 		        var element = row.children.item(k);
                 var temp = element.innerHTML;
-		        element.innerHTML = "<div id = 'editedPayrate' contenteditable = 'true'>" + temp + "</div>";
+		        element.innerHTML = "<input id = 'editedPayrate' type = 'text' size = '10' value = '" + temp + "'>";
             }
 		    rowNum = i;
 		    elem1 = row.children.item(0);
@@ -363,9 +363,9 @@
 			rowNum = -1;
 			if(document.getElementById("newPayrt") == null && document.getElementById("startDate") == null && document.getElementById("endDate") == null
 				&& typeof elem1 !== 'undefined' && typeof elem2 !== 'undefined' && typeof elem3 !== 'undefined') {
-				let edit1 = elem1.textContent;
-				let edit2 = elem2.textContent;
-				let edit3 = elem3.textContent;
+				let edit1 = elem1.querySelector('input').value;
+				let edit2 = elem2.querySelector('input').value;
+				let edit3 = elem3.querySelector('input').value;
 				if (edit1 != "" && edit2 != "" && edit3 != "") {
 						out += crdnr + "," + edit1 + "," + edit2 + "," + edit3 + "\n";
 				} 
